--- a/Deprecating Programming Languages.scriv/QuickLook/Preview.html
+++ b/Deprecating Programming Languages.scriv/QuickLook/Preview.html
@@ -221,6 +221,8 @@
 </li>
 <li>
 <p class="itemTitle">DLLs</p>
+<p class="itemText">- HTTP servers are DLLs</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- Why don't we use them as DLLs? Callback and CPS notation is too clunky.</p>
 </li>
 <li>
 <p class="itemTitle">Servers</p>
@@ -429,8 +431,10 @@
 
 <li>
 <p class="topLevelItemTitle">Other Technologies - To Be Considered</p>
+<p class="itemText">- Peephole Technology (portable)</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- used by gcc</p>
 </li>
-<hr class="afterTitle"/>
+<hr class="afterText"/>
 <ul>
 <li>
 <p class="itemTitle">Framing Software Reuse</p>
@@ -472,6 +476,20 @@
 <li>
 <p class="itemTitle">Business ORG Charts</p>
 <p class="itemText">- https://guitarvydas.github.io/2021/09/21/ORG-Chart-Takeaways.html</p>
+</li>
+<li>
+<p class="itemTitle">ASON</p>
+<p class="itemText">- https://altscript.com</p>
+</li>
+<li>
+<p class="itemTitle">OCG</p>
+<p class="itemText">- declarative tree walker<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- produces portable code</p>
+</li>
+<li>
+<p class="itemTitle">RTL</p>
+<p class="itemText">- Peepholer technology (portability)</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">- used by GCC</p>
 </li>
 </ul>
 <hr class="afterText"/>
@@ -566,7 +584,7 @@
 <p class="itemText"><p class="p1"><span class="s1">- Python</p>
 </li>
 <li>
-<p class="itemTitle">Untitled Document</p>
+<p class="itemTitle">Pipelines</p>
 </li>
 </ul>
 <hr class="afterTitle"/>
